# mediaqbot

./: .gitignore  .gitmodules  LICENSE  Makefile  Pipfile  README.md  main.py  names.py  run.sh  todo.txt
.github/workflows/: server-release.yml
client/: .gitignore  main.py  mpv.py  setup.py
client/mediaqclient/: main.py
mediaq-client/: main.py
rust-server/: .gitignore  Cargo.toml
rust-server/src/: bot.rs  db.rs  main.rs  web.rs
server/: Makefile  Pipfile  env.sh  requirements.txt  run.sh
server/mediaq-server/: main.py
