[package]
name = "rust-server"
version = "0.1.0"
authors = ["Rafael Epplee <raffomania@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
teloxide = "0.2.0"
tokio = "0.2.13"
log = "0.4.8"
pretty_env_logger = "0.4.0"
dotenv = "0.15"
sled = "0.31"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
names = "0.11"
anyhow = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
bincode = "1"
actix-rt = "1"